fully responsive but don't know how

--- a/mens.css
+++ b/mens.css
@@ -1,8 +1,11 @@
-@media (min-width:300px) and (max-width:900px) {
+/* @media (min-width:300px) and (max-width:900px) {
     body {
         width: 160%;
     }
-}
+} */
+
+
+@media (max-width:768px) {}
 
 
 body {
@@ -13,11 +16,12 @@ body {
 
 .navbar {
     width: 100%;
-    display: inline-block;
     position: fixed;
     font-family: sans-serif;
-    justify-content: space-between;
+    display: inline;
+    flex: wrap;
 }
+
 
 
 .logo {
@@ -104,12 +108,12 @@ input {
     padding: 1%;
 }
 
-
 footer {
-    margin-top: 5%;
+    align-content: center;
+    padding-top: 5%;
     font-family: sans-serif;
-    margin-bottom: 5%;
-    width: 100%;
+    padding-bottom: 5%;
+    margin: auto;
 }
 
 
@@ -118,18 +122,18 @@ footer {
 }
 
 h6 {
-    font-size: smaller;
+    font-size: 11px;
     font-weight: lighter;
 }
 
 .email {
-    width: 500px;
+    width: 300px;
 }
 
 .content {
     display: flex;
-    justify-content: space-around;
-    padding: 1%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .f {
