--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-@media (min-width:300px) and (max-width:900px) {
+/* @media (max-width:900px) {
     body {
-        width: 160%;
+        width: auto;
     }
-}
+} */
+
+@media (max-width:768px) {}
 
 
 body {
@@ -26,10 +28,10 @@ body::-webkit-scrollbar {
 
 .navbar {
     width: 100%;
-    display: inline-block;
     position: fixed;
     font-family: sans-serif;
-    justify-content: space-between;
+    display: inline;
+    flex: wrap;
 }
 
 
@@ -41,8 +43,10 @@ body::-webkit-scrollbar {
 
 
 ul li {
+    width: auto;
     list-style: none;
-    display: inline;
+    display: inline-flex;
+    padding: 0.2%;
 }
 
 a {
@@ -50,9 +54,8 @@ a {
     color: black;
     letter-spacing: 1px;
     font-family: sans-serif;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 500;
-    padding: 5px;
 }
 
 
@@ -90,11 +93,19 @@ video {
 }
 
 
+/* @media (max-width:900px) {
+    footer {
+        position: relative;
+
+    }
+} */
+
 footer {
-    margin-top: 5%;
+    align-content: center;
+    padding-top: 5%;
     font-family: sans-serif;
-    margin-bottom: 5%;
-    width: 100%;
+    padding-bottom: 5%;
+    margin: auto;
 }
 
 
@@ -103,18 +114,18 @@ footer {
 }
 
 h6 {
-    font-size: smaller;
+    font-size: 11px;
     font-weight: lighter;
 }
 
 .email {
-    width: 500px;
+    width: 300px;
 }
 
 .content {
     display: flex;
-    justify-content: space-around;
-    padding: 1%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .f {
